Master: 

* fix in docker install step
* Enable container feature before installing docker
* Add some troubleshooting step for docker in Readme
* Add basic proxy usage when installing docker
* Mark some deprecated notes in old files for docker installation
* Update to default docker install version: "17.06.2-ee-16"